--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "http-status-codes": "^2.3.0"
+    "http-status-codes": "^2.3.0",
+    "marked": "^13.0.0",
+    "sanitize-html": "^2.13.0",
+    "turndown": "^7.2.0"
   }
 }
